# gui-rock_widget_collection

./: .gitignore  CMakeLists.txt  manifest.xml  mytest.m  test.rb  test2.rb
cmake/: FindQWT.cmake  FindQWT_QT4.cmake
configuration/: image_view_widget.pc.in  plotting_widget.pc.in
doc/: Doxyfile
scripts/: test_gslview_points.rb  test_multi.rb  test_plot.rb  virtual_joystick.rb
src/: ArrowItem.cc  ArrowItem.h  BorderLineOptionDialog.cc  BorderLineOptionDialog.h  CMakeCache.txt  CMakeLists.txt  CSVExporter.cc  CSVExporter.h  CSVImporter.cc  CSVImporter.h  ColorPickerButton.cc  ColorPickerButton.h  CurveListItemWidget.h  CurveOptionWidget.cc  CurveOptionWidget.h  CurveSelectionDialog.cc  CurveSelectionDialog.h  DataManager.cc  DataManager.h  DrawItem.cc  DrawItem.h  EllipseItem.cc  EllipseItem.h  ExtendedPlotZoomer.cc  ExtendedPlotZoomer.h  FillItem.cc  FillItem.h  GeneralOptionsWidget.cc  GeneralOptionsWidget.h  IdTooLargeException.h  ImageView.cc  ImageView.h  ImageViewGL.cc  ImageViewGL.h  ImageViewGLWidget.cc  ImageViewGLWidget.h  ImageViewPlugin.cc  ImageViewPlugin.h  ImageViewSDL.cc  ImageViewSDL.h  (+41 more)
src/2dvis/: WaterwallDisplayPlugin.cc  WaterwallDisplayPlugin.h  qwaterfalldisplay.cc  qwaterfalldisplay.h
src/artificial_horizon/: CMakeLists.txt  artificialhorizon.cc  artificialhorizon.h  artificialhorizonplugin.cc  artificialhorizonplugin.h  compass.cc  compass.h  compassplugin.cc  compassplugin.h  manifest.xml  orientation.cc  orientation.h  orientationplugin.cc  orientationplugin.h
src/artificial_horizon/src/: CMakeLists.txt  artificialhorizon.h  libartificial_horizon.so.rb
src/generic_widgets/: ArrowItem.cc  ArrowItem.h  DrawItem.cc  DrawItem.h  LineItem.cc  LineItem.h  PaintWidget.cc  PaintWidget.h  PointItem.h  PolylineItem.cc  RectangleItem.cc  RockSlider.cc  RockSlider.h  RockSliderPlugin.cc  RockSliderPlugin.h  TextItem.cc  TextItem.h
src/gst_image_view/: ContextMenuGraphicsWidget.cc  FrameAppSrc.cc  FrameAppSrc.h  GraphicsPointsItem.cc  GraphicsPointsItem.h  GstImageView.cc  GstImageView.h  GstImageViewPlugin.cc  GstImageViewPlugin.h  main.cpp
src/gst_image_view/scripts/: test.rb  testgui.ui
src/image_view/: ContextMenuGraphicsWidget.cc  ContextMenuGraphicsWidget.h  DrawItem.h  EllipseItem.h  GraphicsPointsItem.cc  GraphicsPointsItem.h  ImageView.cc  ImageView.h  ImageViewGL.cc  ImageViewGL.h  ImageViewPlugin.cc  ImageViewPlugin.h  LineItem.cc  LineItem.h  PointItem.cc  PointItem.h  PolygonItem.h  RectangleItem.h  TextItem.h  main.cc  main.cpp
src/image_view/scripts/: test.rb  testgui.ui
src/image_view_old/: ImageViewOld.cc  ImageViewOld.h  ImageViewOldGL.h  ImageViewOldPlugin.cc  ImageViewOldPlugin.h  main.cc
src/multi_view/: MultiViewPlugin.cc  MultiViewPlugin.h  MultiViewWidget.cc  MultiViewWidget.h  MultiWidget.cc  MultiWidget.h  MultiWidgetPlugin.cc  MultiWidgetPlugin.h  WidgetButton.cc  WidgetButton.h  WidgetButtonPlugin.cc  WidgetButtonPlugin.h  multimain.cc
src/nav_ball/: navball.cc  navball.h  navballplugin.cc  navballplugin.h
src/new_image_view/: NewImageView.cc  NewImageView.h  NewImageViewPlugin.cc  NewImageViewPlugin.h  main.cpp
src/new_image_view/scripts/: test.rb  testgui.ui
src/phonon_image_view/: FrameDevice.cc  FrameDevice.h  PhononImageView.cc  PhononImageView.h  PhononImageViewPlugin.cc  PhononImageViewPlugin.h  main.cpp
src/plot2d/: Plot2d.cc  Plot2d.h  Plot2dPlugin.cc  Plot2dPlugin.h  qcustomplot.cc  qcustomplot.h
src/plotting/: #configuration.xml#  AxisOptionsWidget.cc  AxisOptionsWidget.h  BorderLineOptionDialog.cc  BorderLineOptionDialog.h  CMakeLists.txt  CSVExporter.h  CSVImporter.cc  CSVImporter.h  CurveOptionWidget.cc  CurveOptionWidget.h  CurveSelectionDialog.cc  CurveSelectionDialog.h  DataManager.cc  DataManager.h  FindLIBXML2.cmake  FindQWT.cmake  GeneralOptionsWidget.cc  GeneralOptionsWidget.h  Makefile-plotting_widget.mk  OptionsDialog.cc  OptionsDialog.h  PlotWidget.cc  PlotWidget.h  PlotWidgetPlugin.cc  PlotWidgetPlugin.h  PlotXMLReader.cc  PlotXMLWriter.cc  PlotXMLWriter.h  PlottingWidget.cc  PlottingWidget.h  QtExporter.h  XMLConfigReader.cc  manifest.xml  plotmain.cc
src/plotting/src/: BorderLineOptionDialog.cc  CurveListItemWidget.cc  CurveListItemWidget.h  DataManager.cc  DataManager.h  ExtendedPlotZoomer.h  GeneralOptionsWidget.cc  IdTooLargeException.cc  OptionsDialog.cc  OptionsDialog.h  PlotXMLReader.cc  PlotXMLReader.h  PlotXMLWriter.cc  PlottingWidget.cc  QtExporter.cc  QtExporter.h  XMLConfigReader.cc  XMLConfigWriter.cc  main.cc
src/progress_indicator/: ProgressIndicator.cc  ProgressIndicator.h  ProgressIndicatorPlugin.cc  ProgressIndicatorPlugin.h
src/range_view/: RangeView.cc  RangeView.h  RangeViewGL.cc  RangeViewGL.h  RangeViewPlugin.cc  RangeViewPlugin.h
src/sonar_view/: SonarView.cc  SonarView.h  SonarViewGL.cc  SonarViewGL.h  SonarViewPlugin.cc  SonarViewPlugin.h  sonarTest.cpp
src/sonar_widget/: ColorGradient.cc  ColorGradient.h  ColorGradientTypes.h  SonarPlot.cc  SonarPlot.h  SonarWidget.cc  SonarWidget.h  SonarWidgetPlugin.h
src/stream_aligner_widget/: CMakeLists.txt  StreamAlignerWidget.cpp  StreamAlignerWidget.h  StreamAlignerWidgetPlugin.cpp  StreamAlignerWidgetPlugin.h  test.hpp
src/timeline/: BoundarySlider.cc  BoundarySlider.h  IndexSlider.cc  IndexSlider.h  SlideBarItem.cc  SlideBarItem.h  Slider.cc  Slider.h  TestWidget.h  Timeline.cc  Timeline.h  TimelinePlugin.cc  TimelinePlugin.h  TimelineWidget.cc  TimelineWidget.h  main.cpp
src/timeline/resources/raw/: index_slider.xcf
src/virtual_joystick/: JoystickWidget.cpp  JoystickWidget.h  VirtualJoystick.cc  VirtualJoystick.h  VirtualJoystickPlugin.cc  VirtualJoystickPlugin.h  main.cpp
src/vtk/plot2d/: Plot2d.cc  Plot2d.h  Plot2dPlugin.cc  Plot2dPlugin.h
src/vtk/sonar_display/: SonarDisplay.cc  SonarDisplay.h  SonarDisplayPlugin.cc  SonarDisplayPlugin.h
src/vtk/vectorfield3D/: VTK_LICENCE  vectorfield3D.cc  vectorfield3D.h  vectorfield3DPlugin.cc  vectorfield3DPlugin.h
src/vtk/vectorfield3D/scripts/: test.rb
